<resources>
    <string name="app_name">TourMate</string>
    <string name="get_started">Get Started</string>
    <string name="onboardingFragment_text">Create your dream trip with ease. Choose a destination, find the perfect place to stay, and create an itinerary that suits your preferences.</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="select_the_city">Select the city</string>
    <string name="selectFragment_text">Please select the city for getting information</string>
    <string name="search_city">Search city</string>
    <string name="search">Search</string>
    <string name="distance_unit">km</string>
    <string name="time_unit">min</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="your_location">Selected Location</string>
    <string name="description">Description</string>
    <string name="go_to_location">Go to Location</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="not_found">Not found</string>
    <string name="clear">Clear List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_me_anything">Ask me anything</string>
    <string name="ai_chatbot">AI Chatbot</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="report_title">Report response</string>
    <string name="send_text">Send</string>
    <string name="cancel_text">Cancel</string>
    <string name="type_something">Type something...</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="positive_response">Thanks for your report!</string>
    <string name="ok">OK</string>
    <string-array name="report_spinner">
        <item value="Select reason"/>
        <item value="Inappropriate content"/>
        <item value="Offensive language"/>
        <item value="Spam or misleading content"/>
        <item value="Other"/>
    </string-array>
</resources>