<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:padding="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <TextView
        android:id="@+id/report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_title"
        android:textColor="@color/home_item_text"
        android:textSize="@dimen/text_small"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_small"
        android:text="* Required"
        android:textColor="@color/home_item_text"
        android:textSize="@dimen/text_xsmall"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/report_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/spinner_reason"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_search_height"
        android:padding="@dimen/padding_medium"
        android:layout_marginTop="@dimen/margin_large_small"
        android:background="@drawable/grey_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_title"
        />

    <TextView
        android:id="@+id/comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/comment_optional"
        android:textColor="@color/home_item_text"
        android:textSize="@dimen/text_xsmall"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/spinner_reason"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/comment_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_large_small"
        android:padding="20dp"
        android:background="@drawable/grey_border"
        android:hint="@string/type_something"
        android:textColorHint="@color/box_color"
        android:textColor="@color/home_item_text"
        android:textSize="@dimen/text_xsmall"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_title"/>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:backgroundTint="@color/button_background"
        android:text="@string/send_text"
        android:textColor="@color/button_textcolor"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_half"
        app:layout_constraintTop_toBottomOf="@id/comment_text"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large_small"
        android:layout_marginStart="@dimen/margin_small"
        android:backgroundTint="@color/cancel_color"
        android:text="@string/cancel_text"
        android:textColor="@color/button_textcolor"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>