<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectFragment"
    android:background="@color/main_blue">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-32dp"
        app:layout_constraintTop_toTopOf="@id/guideline_half"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/main_white"
        app:cardCornerRadius="@dimen/default_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/select_the_city"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="@string/selectFragment_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />


            <AutoCompleteTextView
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="@dimen/default_button_height"
                android:background="@drawable/default_grey_border"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:hint="@string/search"
                android:textSize="@dimen/text_small"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_light"
                android:drawableStart="@drawable/search"
                android:drawableTint="@color/secondary_grey"
                android:drawablePadding="@dimen/padding_large_small"
                android:paddingStart="@dimen/padding_medium"/>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/light_black"
                android:text="@string/search"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/main_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="285dp"
        android:src="@drawable/selection_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>